--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,10 +24,11 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.11"
 torch = "^1.13.1"
 numpy = "^1.24.2"
 wandb = "^0.13.10"
+kedro = "^0.18.5"
 
 
 [build-system]
