--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,11 @@ torch = "^1.13.1"
 numpy = "^1.24.2"
 wandb = "^0.13.10"
 kedro = "^0.18.5"
+pytest = "^7.2.1"
 
+
+[tool.poetry.group.dev.dependencies]
+kedro-viz = "^5.3.0"
 
 [build-system]
 requires = ["poetry-core"]
