--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ numpy = "^1.24.2"
 wandb = "^0.13.10"
 kedro = "^0.18.5"
 pytest = "^7.2.1"
+pytest-cov = "^4.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
