--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -16,6 +16,9 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
+      - run: |
+          pip install poetry
+          poetry install
       - name: run pytest
         run: |
           pytest
