add init github workflow action

--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -17,8 +17,7 @@ jobs:
         with:
           python-version: '3.9'
       - run: |
-          pip install poetry
-          poetry install
+          pip install .
       - name: run pytest
         run: |
           pytest
