--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ kedro = "^0.18.5"
 pytest = "^7.2.1"
 pytest-cov = "^4.0.0"
 kaggle = "^1.5.13"
+kedro-datasets = {extras = ["pillow"], version = "^1.0.2"}
+torchvision = "^0.14.1"
+tqdm = "^4.65.0"
 
 
 [tool.poetry.group.dev.dependencies]
