--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ kaggle = "^1.5.13"
 kedro-datasets = {extras = ["pillow"], version = "^1.0.2"}
 torchvision = "^0.14.1"
 tqdm = "^4.65.0"
+kedro-viz = "^5.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
