--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ kedro-datasets = {extras = ["pillow"], version = "^1.0.2"}
 torchvision = "^0.14.1"
 tqdm = "^4.65.0"
 kedro-viz = "^5.3.0"
+icecream = "^2.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
