--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -38,3 +38,18 @@
 # The Data Catalog supports being able to reference the same file using two different DataSet implementations
 # (transcoding), templating and a way to reuse arguments that are frequently repeated. See more here:
 # https://kedro.readthedocs.io/en/stable/data/data_catalog.html
+
+# dataset:
+#   type: PartitionedDataSet
+#   filepath: data/02_intermediate/preprocessed_dataset
+
+preprocessed_dataset:
+  type: pickle.PickleDataSet
+  filepath: data/02_intermediate/preprocessed_dataset.pkl
+  backend: pickle
+
+trained_model:
+  type: pickle.PickleDataSet
+  filepath: data/06_models/trained_model.pkl
+  backend: pickle
+
