--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ torchvision = "^0.14.1"
 tqdm = "^4.65.0"
 kedro-viz = "^5.3.0"
 pytorch-lightning = "^2.0.0"
+wandb = "^0.14.2"
 
 
 [tool.poetry.group.dev.dependencies]
