--- a/conf/base/parameters/model_training.yml
+++ b/conf/base/parameters/model_training.yml
@@ -15,7 +15,7 @@ model:
   learning_rate: 0.001
 
 model_training:
-  num_epochs: 10
+  num_epochs: 2 # for testing
 
 logger:
   project_name: dlmarines
