--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,10 @@ wandb = "^0.14.2"
 [tool.poetry.group.dev.dependencies]
 kedro-viz = "^5.3.0"
 
+
+[tool.poetry.group.documentation.dependencies]
+mkdocs = "^1.4.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
